--- a/TicTacToe/TicTacToe.UI/Pages/Game.razor
+++ b/TicTacToe/TicTacToe.UI/Pages/Game.razor
@@ -4,32 +4,39 @@
 @inject GameEngine GameEngine
 
 <PageTitle>Tic Tac Toe</PageTitle>
-<div class="container">
 
-<div class="row">
-    <div class="col align-self-center">
-        <h1>Tic Tac Toe <span class="badge bg-secondary">New</span></h1>
+
+<div class="row  gy-2 gx-3 align-items-center">
+    <div class="col-12">
+        <h1>Tic Tac Toe </h1>
     </div>
-</div>
-<div class="row">
+
     <div class="col-md-6">
         <input type="text" class="form-control" placeholder="Player 1" aria-label="Player 1" @bind="PlayerOne">
     </div>
     <div class="col-md-6">
         <input type="text" class="form-control" placeholder="Player 2" aria-label="Player 2" @bind="PlayerTwo">
     </div>
-
-    <div class="col-12">
-        <button class="btn btn-dark" id="replay" @onclick="(async) => StartGame()">Start Game</button>
+    <div class="col-md-6">
+        <h4>Total Wins: @GameEngine?.playerOne?.Wins</h4>
+    </div>
+    <div class="col-md-6">
+        <h4>Total Wins: @GameEngine?.playerTwo?.Wins</h4>
+    </div>
+    
+    
+    <div class="col-12 text-end">
+        <button class="btn btn-dark" id="replay" @onclick="(async) => StartGame()">@label</button>
     </div>
 </div>
 <div class="row" style="@visibility">
     <GameBoardV2 Engine="GameEngine"></GameBoardV2>
 </div>
-</div>
+
 @code {
 
     string visibility = "display:none;";
+    string label = "Start Game";
 
     string? PlayerOne { get; set; }
     string? PlayerTwo { get; set; }
@@ -39,6 +46,8 @@
     {
         visibility = string.Empty;
         GameEngine.SetupPlayers(PlayerOne, PlayerTwo);
+        label = "Restart";
+        await Task.CompletedTask;
     }
 
 }
