--- a/TicTacToe/TicTacToe.UI/Pages/Game.razor
+++ b/TicTacToe/TicTacToe.UI/Pages/Game.razor
@@ -11,16 +11,16 @@
         <h1>Tic Tac Toe </h1>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-6">
         <input type="text" class="form-control" placeholder="Player 1" aria-label="Player 1" @bind="PlayerOne">
     </div>
-    <div class="col-md-6">
+    <div class="col-6">
         <input type="text" class="form-control" placeholder="Player 2" aria-label="Player 2" @bind="PlayerTwo">
     </div>
-    <div class="col-md-6">
+    <div class="col-6">
         <h4>Total Wins: @GameEngine?.playerOne?.Wins</h4>
     </div>
-    <div class="col-md-6">
+    <div class="col-6">
         <h4>Total Wins: @GameEngine?.playerTwo?.Wins</h4>
     </div>
     
